--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
             </div>
             <p class="status">Functional</p>
         </div>
-
+        
+        <div class="bot-link active">
+            <h3>Bot Name</h3>
+            <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
+            <p class="status">Functional</p>
+        </div>
         <!-- Template for adding new bots -->
         <!-- Copy this template to add more bots:
         <div class="bot-link active">
