--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
         <div class="bot-link active">
-            <h3>Bot Name</h3>
+            <h3>Backup bot 2</h3>
             <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
             <p class="status">Functional</p>
         </div>
