--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="bot-link active">
             <h3>Backup bot 2</h3>
             <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
+            <button class="copy-btn" data-username="@nikktesstbot">Copy</button>
             <p class="status">Functional</p>
         </div>
         <!-- Template for adding new bots -->
