--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
             </div>
             <p class="status">Functional</p>
         </div>
-        
         <div class="bot-link active">
-            <h3>Backup bot 2</h3>
-            <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
-            <button class="copy-btn" data-username="@nikktesstbot">Copy</button>
+            <h3>Backup Bot</h3>
+            <div class="username-container">
+                <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
+                <button class="copy-btn" data-username="@nikktesstbot">Copy</button>
+            </div>
             <p class="status">Functional</p>
         </div>
+        
         <!-- Template for adding new bots -->
         <!-- Copy this template to add more bots:
         <div class="bot-link active">
