--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="status">Functional</p>
         </div>
         <div class="bot-link active">
-            <h3>Backup Bot</h3>
+            <h3>Backup Bot 2</h3>
             <div class="username-container">
                 <a href="https://t.me/nikktesstbot" target="_blank">@nikktesstbot</a>
                 <button class="copy-btn" data-username="@nikktesstbot">Copy</button>
