--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://t.me/mailtester123bot" target="_blank">@mailtester123bot</a>
                 <button class="copy-btn" data-username="@mailtester123bot">Copy</button>
             </div>
-            <p class="status">Functional</p>
+            <p class="status">Functional (recommended while purchasing credits)</p>
         </div>
         <div class="bot-link active">
             <h3>Backup Bot 2</h3>
