--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     
     <div class="links-container">
         <!-- Main Bot -->
-        <a href="https://t.me/mailbombbot" target="_blank" class="bot-wrapper">
+        <a href="https://t.me/mailflooderrobot" target="_blank" class="bot-wrapper">
             <div class="bot-link active">
                 <h3><i class="fas fa-envelope"></i> Main Bot</h3>
                 <div class="username-container">
                     <span><i class="fab fa-telegram"></i> @mailbombbot</span>
-                    <button class="copy-btn" data-username="@mailbombbot"><i class="fas fa-copy"></i> Copy</button>
+                    <button class="copy-btn" data-username="@mailflooderrobot"><i class="fas fa-copy"></i> Copy</button>
                 </div>
                 <p class="status"><span class="status-indicator"></span> Functional (recommended while purchasing credits)</p>
             </div>
