--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="bot-link active">
                 <h3><i class="fas fa-envelope"></i> Main Bot</h3>
                 <div class="username-container">
-                    <span><i class="fab fa-telegram"></i> @mailbombbot</span>
+                    <span><i class="fab fa-telegram"></i> @mailflooderrobot</span>
                     <button class="copy-btn" data-username="@mailflooderrobot"><i class="fas fa-copy"></i> Copy</button>
                 </div>
                 <p class="status"><span class="status-indicator"></span> Functional (recommended while purchasing credits)</p>
