--- a/index.html
+++ b/index.html
@@ -39,24 +39,13 @@
             <div class="bot-link active">
                 <h3><i class="fas fa-robot"></i> Backup Bot</h3>
                 <div class="username-container">
-                    <span><i class="fab fa-telegram"></i> @mailtester123bot</span>
-                    <button class="copy-btn" data-username="@mailtester123bot"><i class="fas fa-copy"></i> Copy</button>
+                    <span><i class="fab fa-telegram"></i> @mailfloodrobot</span>
+                    <button class="copy-btn" data-username="@mailfloodrobot"><i class="fas fa-copy"></i> Copy</button>
                 </div>
                 <p class="status"><span class="status-indicator"></span> Functional</p>
             </div>
         </a>
         
-        <a href="https://t.me/nikktesstbot" target="_blank" class="bot-wrapper">
-            <div class="bot-link active">
-                <h3><i class="fas fa-robot"></i> Backup Bot 2</h3>
-                <div class="username-container">
-                    <span><i class="fab fa-telegram"></i> @nikktesstbot</span>
-                    <button class="copy-btn" data-username="@nikktesstbot"><i class="fas fa-copy"></i> Copy</button>
-                </div>
-                <p class="status"><span class="status-indicator"></span> Functional</p>
-            </div>
-        </a>
-
         <!-- Old Main Bot (Unavailable) -->
         <a href="https://t.me/mailfloodbot" target="_blank" class="bot-wrapper">
             <div class="bot-link unavailable">
