--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </a>
         
         <!-- Backup Bot -->
-        <a href="https://t.me/mailtester123bot" target="_blank" class="bot-wrapper">
+        <a href="https://t.me/mailfloodrobot" target="_blank" class="bot-wrapper">
             <div class="bot-link active">
                 <h3><i class="fas fa-robot"></i> Backup Bot</h3>
                 <div class="username-container">
