--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         </a>
         
         <!-- Backup Bot -->
-        <a href="https://t.me/mailfloodrobot" target="_blank" class="bot-wrapper">
+        <a href="https://t.me/mailsmsbackupbot" target="_blank" class="bot-wrapper">
             <div class="bot-link active">
                 <h3><i class="fas fa-robot"></i> Backup Bot</h3>
                 <div class="username-container">
-                    <span><i class="fab fa-telegram"></i> @mailfloodrobot</span>
-                    <button class="copy-btn" data-username="@mailfloodrobot"><i class="fas fa-copy"></i> Copy</button>
+                    <span><i class="fab fa-telegram"></i> @mailsmsbackupbot</span>
+                    <button class="copy-btn" data-username="@mailsmsbackupbot"><i class="fas fa-copy"></i> Copy</button>
                 </div>
                 <p class="status"><span class="status-indicator"></span> Functional</p>
             </div>
