--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="contact-info">
-        <i class="fas fa-headset"></i> Contact <a href="https://t.me/gopixo" target="_blank">@gopixo</a> for purchasing credits / other queries
+        <i class="fas fa-headset"></i> Contact <a href="https://t.me/unwalkable" target="_blank">@unwalkable</a> for purchasing credits / other queries
     </div>
     
     <div class="footer">
@@ -97,3 +97,4 @@
     </script>
 </body>
 </html> 
+
